# trustifai

./: .gitignore  README.md  aif360_relationships.txt  aif360_uml_output.txt  base.py  categorial_variables.json  classes_linear_model.dot  classes_sklearn.dot  config.yaml  getUMLRelationships.py  main.py  newbase.py  packages_linear_model.dot  packages_sklearn.dot  pyproject.toml  requirements.txt  sklearnRelationships.py  sklearnUML.py  sklearn_uml_output.txt  sklearn_uml_output_fullClasspath.txt  testing.ipynb
api/: eda.py  events.py  kg.py
backend/: config.py
frontend/: webapp.py
rahul_kt/: connect.py
